--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,30 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.btn {
+  background: #000;
+  border-radius: 5px;
+  border: 0;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  padding: 10px 20px;
+  text-decoration: none !important;
+}
+
+/* Modal buttons */
+.cancelModal {
+  text-align: center;
+}
+.buttonContainer {
+  display: flex;
+  justify-content: space-between;
+  margin: 30px auto 20px;
+  width: 200px;
+}
+.ghostButton {
+  background: none;
+  border: 1px solid #000;
+  color: #000;
+}
